<resources>
    <string name="app_name">Peggy</string>
    <string name="Welcome_text">Say Hello to Peggy!</string>
    <string name="my_button_text">My Button</string>
    <string name="login_text">Lick to login</string>
    <string name="login_username">Enter Username Here.</string>
    <string name="login_password">Enter Password Here.</string>
    <string name="login_example_username">bazookajoecym</string>
    <string name="login_example_password">12345!@#$%</string>
    <string name="login_dialog_text">LOGIN</string>
    <string name="login_pic_URL">https://photos.app.goo.gl/N7QwxY7YfmnOaOQw2</string>
    <string name="control_unlock_button_text">UNLOCK BIKE</string>
    <string name="control_connection_state_text">Connection Status: Not Connected  </string>
    <string name="control_Bike_ID_text">Bike ID: </string>
    <string name="control_light_mode_switch_on">Light Mode: Solid  </string>
    <string name="control_light_mode_switch_off">Light Mode: Blinking  </string>
    <string name="control_light_state_switch_on">Light State: On  </string>
    <string name="control_light_state_switch_off">Light State: Auto  </string>
    <string name="control_riding_history_button">Riding History</string>
    <string name="control_dialog_accept_button_text">ACCEPT</string>
    <string name="control_dialog_cancel_button_text">CANCEL</string>
    <string name="control_dialog_bikeID_text">Enter the MAC address here.</string>
    <string name="history_user_image_description">User Picture</string>
    <string name="history_add_ride_edittext_location">Enter a new ride location.</string>
    <string name="history_add_ride_edittext_date">Enter a new ride date.</string>
    <string name="history_add_ride_button">ENTER NEW RIDE. </string>
    <string name="game_controller_input_key_pressed">Input Key Pressed</string>
    <string name="game_controller_input_key_released">Input Key Released</string>
    <string name="game_controller_input_heading_device">Heading Device</string>
    <string name="game_controller_input_label_device_name">Device Name</string>
    <string name="game_controller_input_heading_axes">Heading Axis</string>
    <string name="game_controller_input_heading_keys">Heading Keys</string>
    <string name="gameview_button">Game View</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">JoyStick Controller</string>
    <string name="BT_temp">Get Temp</string>
    <string name="BT_light_on">Turn Light ON</string>
    <string name="BT_light_off">Turn Light OFF</string>
    <string name="BT_Result">BT Results...</string>
    <string name="BTcontrol_connect_button_text">CONNECT TO PEGGY</string>
    <string name="BTcontrol_connection_state_text">Connection Status: Not Connected</string>
    <string name="BTcontrol_device_text">Device ID: </string>
    <string name="BTcontrol_steer_mode_switch_on">Steer Mode: Autonomous  </string>
    <string name="BTcontrol_steer_mode_switch_off">Steer Mode: Manual  </string>
    <string name="BTcontrol_steer_mode_switching_to_autonomous">Steer Mode: Switching to Autonomous  </string>
    <string name="BTcontrol_steer_mode_switching_to_manual">Steer Mode: Switching to Manual  </string>
    <string name="BTcontrol_throttle_mode_switch_on">Throttle Mode: Autonomous  </string>
    <string name="BTcontrol_throttle_mode_switch_off">Throttle Mode: Manual  </string>
    <string name="BTcontrol_throttle_mode_switching_to_autonomous">Throttle Mode: Switching to Autonomous  </string>
    <string name="BTcontrol_throttle_mode_switching_to_manual">Throttle Mode: Switching to Manual  </string>
    <string name="BTcontrol_kill_button">KILL SWITCH </string>
    <string name="BTcontrol_dialog_accept_button_text">ACCEPT</string>
    <string name="BTcontrol_dialog_cancel_button_text">CANCEL</string>
    <string name="BTcontrol_dialog_deviceID_text">Enter the device name here.</string>
    <string name="BTcontrol_dialog_peggy_name">joecym-desktop #2</string>

    <!--  BluetoothJoystick -->
    <string name="title_connected_to">connected to:</string>
    <string name="title_connecting">connecting</string>
    <string name="title_not_connected">not connected</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth JoyStick.</string>
    <string name="not_connected">You are not connected to a device</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!--  User Buttons -->
    <string name="btnA_text">A</string>
    <string name="btnB_text">B</string>
    <string name="btnC_text">C</string>
    <string name="btnD_text">D</string>

    <!--  Text Views -->
    <string name="dataL_text">( 0, 0 )</string>
    <string name="dataR_text">( 0, 0 )</string>
    <string name="status_text">C</string>
</resources>
