<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joseph.peggy.ControlActivity">

    <LinearLayout
        android:layout_width="318dp"
        android:layout_height="330dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097"
        tools:layout_editor_absoluteX="-39dp">

        <Button
            android:id="@+id/control_unlock_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/control_unlock_button_text" />

        <TextView
            android:id="@+id/control_connection_status"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/control_connection_state_text" />

        <TextView
            android:id="@+id/control_bikeID"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/control_Bike_ID_text" />

        <Switch
            android:id="@+id/control_switch_light_mode"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/control_light_mode_switch_on" />

        <Switch
            android:id="@+id/control_switch_light_state"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/control_light_state_switch_on" />

        <Button
        android:id="@+id/control_riding_history"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/control_riding_history_button" />

        <Button
        android:id="@+id/control_gameview"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gameview_button" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
