<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/control_dialog_bikeID"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/control_dialog_bikeID_text"/>

    <Button
        android:id="@+id/control_dialog_accept"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/control_dialog_accept_button_text" />

    <Button
        android:id="@+id/control_dialog_cancel"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/control_dialog_cancel_button_text" />


</LinearLayout>
