<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/BTcontrol_dialog_deviceID"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/BTcontrol_dialog_peggy_name"/>

    <Button
        android:id="@+id/control_dialog_accept"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/control_dialog_accept_button_text" />

    <Button
        android:id="@+id/control_dialog_cancel"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/control_dialog_cancel_button_text" />


</LinearLayout>
