<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">


    <EditText
        android:id="@+id/dialog_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="GKC"
        android:hint="@string/login_username" />

    <EditText
        android:id="@+id/dialog_password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:text="heretics"
        android:hint="@string/login_password" />

    <Button
        android:id="@+id/login_dialog_button"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/login_dialog_text"/>


</LinearLayout>
