<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joseph.peggy.ControlActivity">

    <LinearLayout
        android:layout_width="318dp"
        android:layout_height="330dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097"
        tools:layout_editor_absoluteX="-39dp">



        <TextView
            android:id="@+id/btResult"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BT_Result" />

        <Button
            android:id="@+id/tempButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/BT_temp" />

        <Button
            android:id="@+id/lightOn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/BT_light_on" />

        <Button
            android:id="@+id/lightOff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/BT_light_off" />



    </LinearLayout>

</android.support.constraint.ConstraintLayout>
