<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joseph.peggy.ControlActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="314dp"
        android:layout_height="354dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="314dp"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btcontrol_connection_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="Connect" />

            <Button
                android:id="@+id/btcontrol_preferences_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="Preferences" />
        </LinearLayout>

        <TextView
            android:id="@+id/btcontrol_BTconnection_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/control_connection_state_text" />

        <TextView
            android:id="@+id/btcontrol_deviceID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/BTcontrol_device_text" />

        <Switch
            android:id="@+id/btcontrol_switch_steer_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/BTcontrol_steer_mode_switch_off" />

        <Switch
            android:id="@+id/btcontrol_switch_throttle_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/BTcontrol_throttle_mode_switch_off" />

        <Button
            android:id="@+id/kill_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorRED"
            android:text="@string/BTcontrol_kill_button"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="X"
            android:textColor="#444444"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:text="Y"
            android:textColor="#444444"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView2"
            android:text="Angle"
            android:textColor="#444444"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView3"
            android:text="Distance"
            android:textColor="#444444"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView3"
            android:text="Direction"
            android:textColor="#444444"
            android:textSize="15dp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_joystick"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:background="@drawable/image_button_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></RelativeLayout>

</android.support.constraint.ConstraintLayout>
